# tool

./: .gitignore  README.md  pyproject.toml  start.sh
netguard/common/: config.py  db.py  desktopapps.py  priv.py
netguard/gui/: main.py  tray.py
netguard/helper/: netguard_helper.py
netguard/install/: install.sh  netguard-monitor.service  netguard-tray.service  netguard.desktop
netguard/install/polkit/: com.netguard.helper.policy
netguard/monitor/: collector.py
